Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTI429NET.CS

            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ChConfigEx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_ChConfigEx(UInt32 configval, UInt16 count, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ChOutputStateSet@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_ChOutputStateSet(UInt32 pos, UInt32 neg, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_CmdAddr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_CmdAddr(Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_CmdAlloc@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_CmdAlloc(Int32 count, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_CmdAllocEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_CmdAllocEx(UInt32 configval, Int32 count, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_CmdBaseRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_CmdBaseRd(Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_CmdBaseWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_CmdBaseWr(UInt32 addrval, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_CmdClear@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_CmdClear(Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_CmdCountRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI429_CmdCountRd(Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_CmdCountWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_CmdCountWr(UInt16 countval, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_CmdCtrlRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI429_CmdCtrlRd(Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_CmdCtrlWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_CmdCtrlWr(UInt16 ctrlval, Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_CmdCurrRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI429_CmdCurrRd(Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_CmdCurrWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_CmdCurrWr(UInt16 addrval, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_CmdInit@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_CmdInit(UInt16 opcode, ref UInt16 block);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_CmdInsert@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_CmdInsert(ref UInt16 block, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_CmdMaxLoopRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI429_CmdMaxLoopRd(Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_CmdMaxLoopWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_CmdMaxLoopWr(UInt16 countval, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_CmdRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_CmdRd(ref UInt16 block, UInt32 addrval, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_CmdRestart@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_CmdRestart(Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_CmdShotRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_CmdShotRd(Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_CmdShotWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_CmdShotWr(Int32 value, Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_CmdSkipRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_CmdSkipRd(Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_CmdSkipWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_CmdSkipWr(Int32 value, Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_CmdStackClr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_CmdStackClr(Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_CmdStartRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI429_CmdStartRd(Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_CmdStartWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_CmdStartWr(UInt16 addrval, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_CmdStepRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_CmdStepRd(Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_CmdStepWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_CmdStepWr(Int32 value, Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_CmdTotalRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_CmdTotalRd(Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_CmdTotalWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_CmdTotalWr(Int32 countval, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_CmdWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_CmdWr(ref UInt16 block, UInt32 addrval, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ConvFromArinc@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_ConvFromArinc(UInt32 msgval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ConvToArinc@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_ConvToArinc(UInt32 msgval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_DllUsageCount@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_DllUsageCount();
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_FilterAddr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_FilterAddr(Int32 labelval, Int32 sdival, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_FilterCreate@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_FilterCreate(IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_FilterFill@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_FilterFill(UInt32 msgaddr, UInt32 basevaladdr, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_FldGetParBit@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI429_FldGetParBit(UInt32 msgval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_FldPutParBit@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_FldPutParBit(UInt32 msgval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_GetChanCount@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_GetChanCount(ref Int32 rcvcount, ref Int32 xmtcount, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_IsChan@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_IsChan(Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_IsRcvChan@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_IsRcvChan(Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_IsXmtChan@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_IsXmtChan(Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_LabelReverse@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_LabelReverse(UInt32 msgval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ListAddr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_ListAddr(Int32 index, UInt32 listaddr, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ListAddrEx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_ListAddrEx(Int32 index, UInt32 listaddr, ref UInt16 header, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ListAdvance@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_ListAdvance(UInt32 listaddr, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ListClear@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_ListClear(UInt32 listaddr, IntPtr handleval);
